--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"server": "json-server --watch public/db.json --port 3001"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^4.7.0",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@mui/icons-material": "^5.2.5",
 		"@mui/material": "^5.2.7",
 		"@mui/styled-engine-sc": "^5.1.0",
+		"antd": "^4.18.3",
 		"axios": "^0.24.0",
 		"json-server": "^0.17.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"styled-components": "^5.3.3"
